fix:  handle missing color

--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-    background: var(--color-primary-700);
+    background: var(--color-primary-300);
 
     position: fixed;
     z-index: 1031;
@@ -12,7 +12,7 @@
     left: 0;
 
     width: 100%;
-    height: 2px;
+    height: 3px;
 }
 
 /* Fancy blur effect */
@@ -22,7 +22,7 @@
     right: 0px;
     width: 100px;
     height: 100%;
-    box-shadow: 0 0 10px var(--color-primary-700), 0 0 5px var(--color-primary-700);
+    box-shadow: 0 0 10px var(--color-primary-300), 0 0 5px var(--color-primary-300);
     opacity: 1;
 
     -webkit-transform: rotate(3deg) translate(0px, -4px);
